--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,9 @@
   <div id="image">
   </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script>
+$("#yo").append("hey hey hey hey!!!!!");
+</script>
+
 
 </body>
